<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home_title"
            android:icon="@drawable/home_ic"/>
        <item android:title="@string/nav_contact_title">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_req_support"
                        android:title="@string/nav_req_support_title"
                        android:icon="@drawable/star_ic"/>
                </group>
            </menu>
        </item>
        <item android:title="@string/nav_info_title">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_help"
                        android:title="@string/nav_help_title"
                        android:icon="@drawable/information_ic"/>
                    <item
                        android:id="@+id/nav_about"
                        android:title="@string/nav_about_title"
                        android:icon="@drawable/about_ic"/>
                    <item
                        android:id="@+id/nav_disc"
                        android:title="@string/nav_disc_title"
                        android:icon="@drawable/disclaimer_ic"/>
                </group>
            </menu>
        </item>
        <item android:title="@string/nav_account_title">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_usr_profile"
                        android:title="@string/nav_usr_profile_title"
                        android:icon="@drawable/profile_ic"/>
                    <item
                        android:id="@+id/nav_usage"
                        android:title="@string/nav_usage_title"
                        android:icon="@drawable/usage_ic"/>
                </group>
            </menu>
        </item>
    </group>
</menu>